--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,6 +98,7 @@ jobs:
         if: ${{ env.SHOULD_UPDATE }}
         uses: ncipollo/release-action@v1
         with:
+          permissions: write-all
           artifacts: "output/*.*"
           body: "${{ env.TOTAL_DOMAINS }} Domains"
           token: ${{ secrets.GITHUB_TOKEN }}
